[package]
name = "pg-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
merkle_hash = "3.6.1"
once_cell = "1.19.0"
regex = "1.10.4"
regex_static = "0.1.1"
rstest = "0.18.2"
substring = "1.4.5"
termsize = "0.1.6"
users = "0.11.0"
strum = "0.26.2"
strum_macros = "0.26.2"
fslock = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
